Started on events, added license.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"name" : "JariZ's Update mod",
 	"version":"0.0.1",
 	"author":"halp@jari.io",
-	"url":"https://github.com/jariz/update",
+	"url":"https://github.com/jariz/jariz-update",
 	"description" : "Adds Update functionality to Game Tycoon.",
 	"main" : "./modAPI.js"
 }
